syntax = "proto3";

package worklen.proto;
option go_package = "proto/generated";

message Source {
  string id = 1;
  string name = 2;
}

message Article {
  Source source = 1;
  string author = 2;
  string title = 3;
  string description = 4;
  string url = 5;
  string urlToImage = 6;
  string publishedAt = 7;
  string content = 8;
}

message GetNewsRequest {
	int32 pageSize = 1;
    string query = 2;
}

message NewsList {
    string status =1;
    int64 totalResults = 2;
    repeated Article articles = 3;
}

service ProtobufService {
	rpc GetNewsArticles(GetNewsRequest) returns (NewsList);
}